cabal-version:        2.4
name:                 adventofcode-haskell
version:              0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:               daniel.beer
maintainer:           etkar.klaus@googlemail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:   CHANGELOG.md

executable adventofcode
    ghc-options: 
        -Wall

    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Kit
        Puzzles
        Day01.Common
        Day01.Part2
        Day01.Part1
        Day03.Part2
        Day03.Part1
        Day02.Common
        Day02.Part2
        Day02.Part1

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs:   src
    build-depends:    base ^>=4.14.3.0
    default-language: Haskell2010

Test-Suite test-adventofcode
    ghc-options: 
        -Wall
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    other-modules:
        Kit
        Puzzles
        Day01.Common
        Day01.Part2
        Day01.Part1
        Day03.Part2
        Day03.Part1
        Day02.Common
        Day02.Part2
        Day02.Part1
    hs-source-dirs:   test, src
    build-depends:    base ^>=4.14.3.0, HUnit
    default-language: Haskell2010
